part_3_semantic/vsopcompiler/vsopc.output
Terminaux inutilisés dans la grammaire

    EMBEDDED


Grammaire

    0 $accept: Program $end

    1 Program: Class ProgramContinued

    2 ProgramContinued: %empty
    3                 | Class ProgramContinued

    4 Class: "class" TYPE_IDENTIFIER "{" ClassBody "}"
    5      | "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER "{" ClassBody "}"

    6 ClassBody: %empty
    7          | Field ClassBody
    8          | Method ClassBody

    9 Field: OBJECT_IDENTIFIER ":" Type ";"
   10      | OBJECT_IDENTIFIER ":" Type "<-" Expr ";"

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" Type Block

   12 Type: TYPE_IDENTIFIER
   13     | "int32"
   14     | "bool"
   15     | "string"
   16     | "unit"

   17 Formals: %empty
   18        | Formal FormalsContinued

   19 FormalsContinued: %empty
   20                 | "," Formal FormalsContinued

   21 Formal: OBJECT_IDENTIFIER ":" Type

   22 Block: "{" Expr BlockExpr "}"

   23 BlockExpr: %empty
   24          | ";" Expr BlockExpr

   25 Expr: If
   26     | While
   27     | Let
   28     | OBJECT_IDENTIFIER "<-" Expr
   29     | "not" Expr
   30     | Expr "and" Expr
   31     | Expr "<=" Expr
   32     | Expr "<" Expr
   33     | Expr "=" Expr
   34     | Expr "-" Expr
   35     | Expr "+" Expr
   36     | Expr "/" Expr
   37     | Expr "*" Expr
   38     | Expr "^" Expr
   39     | "-" Expr
   40     | "isnull" Expr
   41     | OBJECT_IDENTIFIER "(" Args ")"
   42     | Expr "." OBJECT_IDENTIFIER "(" Args ")"
   43     | "new" TYPE_IDENTIFIER
   44     | OBJECT_IDENTIFIER
   45     | "self"
   46     | Literal
   47     | "(" ")"
   48     | "(" Expr ")"
   49     | Block
   50     | InvalidToken

   51 If: "if" Expr "then" Expr
   52   | "if" Expr "then" Expr "else" Expr

   53 While: "while" Expr "do" Expr

   54 Let: "let" OBJECT_IDENTIFIER ":" Type "in" Expr
   55    | "let" OBJECT_IDENTIFIER ":" Type "<-" Expr "in" Expr

   56 Args: %empty
   57     | Expr ArgsExprList

   58 ArgsExprList: %empty
   59             | "," Expr ArgsExprList

   60 Literal: INTEGER_LITERAL
   61        | STRING_LITERAL
   62        | "true"
   63        | "false"

   64 InvalidToken: INVALID_CHAR
   65             | INVALID_HEX_NUMBER
   66             | INVALID_INTEGER_LITERAL
   67             | INVALID_EOF_STRING
   68             | INVALID_EOF_COMMENT


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    "and" (258) 30
    "bool" <stringValue> (259) 14
    "class" (260) 4 5
    "do" (261) 53
    "else" (262) 52
    "extends" (263) 5
    "false" (264) 63
    "if" (265) 51 52
    "in" (266) 54 55
    "int32" <stringValue> (267) 13
    "isnull" (268) 40
    "let" (269) 54 55
    "new" (270) 43
    "not" (271) 29
    "self" (272) 45
    "string" <stringValue> (273) 15
    "then" (274) 51 52
    "true" (275) 62
    "unit" <stringValue> (276) 16
    "while" (277) 53
    "{" (278) 4 5 22
    "}" (279) 4 5 22
    "(" (280) 11 41 42 47 48
    ")" (281) 11 41 42 47 48
    ":" (282) 9 10 11 21 54 55
    ";" (283) 9 10 24
    "," (284) 20 59
    "+" (285) 35
    "-" (286) 34 39
    "*" (287) 37
    "/" (288) 36
    "^" (289) 38
    "." (290) 42
    "=" (291) 33
    "<" (292) 32
    "<=" (293) 31
    "<-" (294) 10 28 55
    INVALID_HEX_NUMBER <stringValue> (295) 65
    INVALID_CHAR <stringValue> (296) 64
    INVALID_EOF_STRING (297) 67
    INVALID_EOF_COMMENT (298) 68
    INVALID_INTEGER_LITERAL <stringValue> (299) 66
    INTEGER_LITERAL <intValue> (300) 60
    TYPE_IDENTIFIER <stringValue> (301) 4 5 12 43
    OBJECT_IDENTIFIER <stringValue> (302) 9 10 11 21 28 41 42 44 54 55
    STRING_LITERAL <stringValue> (303) 61
    UNARYMINUS (304)
    EMBEDDED (305)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (51)
        à gauche: 0
    Program <program> (52)
        à gauche: 1
        à droite: 0
    ProgramContinued <program> (53)
        à gauche: 2 3
        à droite: 1 3
    Class <cls> (54)
        à gauche: 4 5
        à droite: 1 3
    ClassBody <classBody> (55)
        à gauche: 6 7 8
        à droite: 4 5 7 8
    Field <field> (56)
        à gauche: 9 10
        à droite: 7
    Method <method> (57)
        à gauche: 11
        à droite: 8
    Type <stringValue> (58)
        à gauche: 12 13 14 15 16
        à droite: 9 10 11 21 54 55
    Formals <formals> (59)
        à gauche: 17 18
        à droite: 11
    FormalsContinued <formals> (60)
        à gauche: 19 20
        à droite: 18 20
    Formal <formal> (61)
        à gauche: 21
        à droite: 18 20
    Block <args> (62)
        à gauche: 22
        à droite: 11 49
    BlockExpr <args> (63)
        à gauche: 23 24
        à droite: 22 24
    Expr <expression> (64)
        à gauche: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        à droite: 10 22 24 28 29 30 31 32 33 34 35 36 37 38 39 40 42 48 51 52 53 54 55 57 59
    If <expression> (65)
        à gauche: 51 52
        à droite: 25
    While <expression> (66)
        à gauche: 53
        à droite: 26
    Let <expression> (67)
        à gauche: 54 55
        à droite: 27
    Args <args> (68)
        à gauche: 56 57
        à droite: 41 42
    ArgsExprList <args> (69)
        à gauche: 58 59
        à droite: 57 59
    Literal <expression> (70)
        à gauche: 60 61 62 63
        à droite: 46
    InvalidToken <expression> (71)
        à gauche: 64 65 66 67 68
        à droite: 50


État 0

    0 $accept: • Program $end

    "class"  décalage et aller à l'état 1

    Program  aller à l'état 2
    Class    aller à l'état 3


État 1

    4 Class: "class" • TYPE_IDENTIFIER "{" ClassBody "}"
    5      | "class" • TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER "{" ClassBody "}"

    TYPE_IDENTIFIER  décalage et aller à l'état 4


État 2

    0 $accept: Program • $end

    $end  décalage et aller à l'état 5


État 3

    1 Program: Class • ProgramContinued

    "class"  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (ProgramContinued)

    ProgramContinued  aller à l'état 6
    Class             aller à l'état 7


État 4

    4 Class: "class" TYPE_IDENTIFIER • "{" ClassBody "}"
    5      | "class" TYPE_IDENTIFIER • "extends" TYPE_IDENTIFIER "{" ClassBody "}"

    "extends"  décalage et aller à l'état 8
    "{"        décalage et aller à l'état 9


État 5

    0 $accept: Program $end •

    $défaut  accepter


État 6

    1 Program: Class ProgramContinued •

    $défaut  réduction par utilisation de la règle 1 (Program)


État 7

    3 ProgramContinued: Class • ProgramContinued

    "class"  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (ProgramContinued)

    ProgramContinued  aller à l'état 10
    Class             aller à l'état 7


État 8

    5 Class: "class" TYPE_IDENTIFIER "extends" • TYPE_IDENTIFIER "{" ClassBody "}"

    TYPE_IDENTIFIER  décalage et aller à l'état 11


État 9

    4 Class: "class" TYPE_IDENTIFIER "{" • ClassBody "}"

    OBJECT_IDENTIFIER  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 6 (ClassBody)

    ClassBody  aller à l'état 13
    Field      aller à l'état 14
    Method     aller à l'état 15


État 10

    3 ProgramContinued: Class ProgramContinued •

    $défaut  réduction par utilisation de la règle 3 (ProgramContinued)


État 11

    5 Class: "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER • "{" ClassBody "}"

    "{"  décalage et aller à l'état 16


État 12

    9 Field: OBJECT_IDENTIFIER • ":" Type ";"
   10      | OBJECT_IDENTIFIER • ":" Type "<-" Expr ";"
   11 Method: OBJECT_IDENTIFIER • "(" Formals ")" ":" Type Block

    "("  décalage et aller à l'état 17
    ":"  décalage et aller à l'état 18


État 13

    4 Class: "class" TYPE_IDENTIFIER "{" ClassBody • "}"

    "}"  décalage et aller à l'état 19


État 14

    7 ClassBody: Field • ClassBody

    OBJECT_IDENTIFIER  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 6 (ClassBody)

    ClassBody  aller à l'état 20
    Field      aller à l'état 14
    Method     aller à l'état 15


État 15

    8 ClassBody: Method • ClassBody

    OBJECT_IDENTIFIER  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 6 (ClassBody)

    ClassBody  aller à l'état 21
    Field      aller à l'état 14
    Method     aller à l'état 15


État 16

    5 Class: "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER "{" • ClassBody "}"

    OBJECT_IDENTIFIER  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 6 (ClassBody)

    ClassBody  aller à l'état 22
    Field      aller à l'état 14
    Method     aller à l'état 15


État 17

   11 Method: OBJECT_IDENTIFIER "(" • Formals ")" ":" Type Block

    OBJECT_IDENTIFIER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Formals)

    Formals  aller à l'état 24
    Formal   aller à l'état 25


État 18

    9 Field: OBJECT_IDENTIFIER ":" • Type ";"
   10      | OBJECT_IDENTIFIER ":" • Type "<-" Expr ";"

    "bool"           décalage et aller à l'état 26
    "int32"          décalage et aller à l'état 27
    "string"         décalage et aller à l'état 28
    "unit"           décalage et aller à l'état 29
    TYPE_IDENTIFIER  décalage et aller à l'état 30

    Type  aller à l'état 31


État 19

    4 Class: "class" TYPE_IDENTIFIER "{" ClassBody "}" •

    $défaut  réduction par utilisation de la règle 4 (Class)


État 20

    7 ClassBody: Field ClassBody •

    $défaut  réduction par utilisation de la règle 7 (ClassBody)


État 21

    8 ClassBody: Method ClassBody •

    $défaut  réduction par utilisation de la règle 8 (ClassBody)


État 22

    5 Class: "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER "{" ClassBody • "}"

    "}"  décalage et aller à l'état 32


État 23

   21 Formal: OBJECT_IDENTIFIER • ":" Type

    ":"  décalage et aller à l'état 33


État 24

   11 Method: OBJECT_IDENTIFIER "(" Formals • ")" ":" Type Block

    ")"  décalage et aller à l'état 34


État 25

   18 Formals: Formal • FormalsContinued

    ","  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 19 (FormalsContinued)

    FormalsContinued  aller à l'état 36


État 26

   14 Type: "bool" •

    $défaut  réduction par utilisation de la règle 14 (Type)


État 27

   13 Type: "int32" •

    $défaut  réduction par utilisation de la règle 13 (Type)


État 28

   15 Type: "string" •

    $défaut  réduction par utilisation de la règle 15 (Type)


État 29

   16 Type: "unit" •

    $défaut  réduction par utilisation de la règle 16 (Type)


État 30

   12 Type: TYPE_IDENTIFIER •

    $défaut  réduction par utilisation de la règle 12 (Type)


État 31

    9 Field: OBJECT_IDENTIFIER ":" Type • ";"
   10      | OBJECT_IDENTIFIER ":" Type • "<-" Expr ";"

    ";"   décalage et aller à l'état 37
    "<-"  décalage et aller à l'état 38


État 32

    5 Class: "class" TYPE_IDENTIFIER "extends" TYPE_IDENTIFIER "{" ClassBody "}" •

    $défaut  réduction par utilisation de la règle 5 (Class)


État 33

   21 Formal: OBJECT_IDENTIFIER ":" • Type

    "bool"           décalage et aller à l'état 26
    "int32"          décalage et aller à l'état 27
    "string"         décalage et aller à l'état 28
    "unit"           décalage et aller à l'état 29
    TYPE_IDENTIFIER  décalage et aller à l'état 30

    Type  aller à l'état 39


État 34

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" • ":" Type Block

    ":"  décalage et aller à l'état 40


État 35

   20 FormalsContinued: "," • Formal FormalsContinued

    OBJECT_IDENTIFIER  décalage et aller à l'état 23

    Formal  aller à l'état 41


État 36

   18 Formals: Formal FormalsContinued •

    $défaut  réduction par utilisation de la règle 18 (Formals)


État 37

    9 Field: OBJECT_IDENTIFIER ":" Type ";" •

    $défaut  réduction par utilisation de la règle 9 (Field)


État 38

   10 Field: OBJECT_IDENTIFIER ":" Type "<-" • Expr ";"

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 63
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 39

   21 Formal: OBJECT_IDENTIFIER ":" Type •

    $défaut  réduction par utilisation de la règle 21 (Formal)


État 40

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" • Type Block

    "bool"           décalage et aller à l'état 26
    "int32"          décalage et aller à l'état 27
    "string"         décalage et aller à l'état 28
    "unit"           décalage et aller à l'état 29
    TYPE_IDENTIFIER  décalage et aller à l'état 30

    Type  aller à l'état 69


État 41

   20 FormalsContinued: "," Formal • FormalsContinued

    ","  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 19 (FormalsContinued)

    FormalsContinued  aller à l'état 70


État 42

   63 Literal: "false" •

    $défaut  réduction par utilisation de la règle 63 (Literal)


État 43

   51 If: "if" • Expr "then" Expr
   52   | "if" • Expr "then" Expr "else" Expr

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 71
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 44

   40 Expr: "isnull" • Expr

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 72
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 45

   54 Let: "let" • OBJECT_IDENTIFIER ":" Type "in" Expr
   55    | "let" • OBJECT_IDENTIFIER ":" Type "<-" Expr "in" Expr

    OBJECT_IDENTIFIER  décalage et aller à l'état 73


État 46

   43 Expr: "new" • TYPE_IDENTIFIER

    TYPE_IDENTIFIER  décalage et aller à l'état 74


État 47

   29 Expr: "not" • Expr

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 75
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 48

   45 Expr: "self" •

    $défaut  réduction par utilisation de la règle 45 (Expr)


État 49

   62 Literal: "true" •

    $défaut  réduction par utilisation de la règle 62 (Literal)


État 50

   53 While: "while" • Expr "do" Expr

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 76
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 51

   22 Block: "{" • Expr BlockExpr "}"

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 77
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 52

   47 Expr: "(" • ")"
   48     | "(" • Expr ")"

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    ")"                      décalage et aller à l'état 78
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 79
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 53

   39 Expr: "-" • Expr

    "false"                  décalage et aller à l'état 42
    "if"                     décalage et aller à l'état 43
    "isnull"                 décalage et aller à l'état 44
    "let"                    décalage et aller à l'état 45
    "new"                    décalage et aller à l'état 46
    "not"                    décalage et aller à l'état 47
    "self"                   décalage et aller à l'état 48
    "true"                   décalage et aller à l'état 49
    "while"                  décalage et aller à l'état 50
    "{"                      décalage et aller à l'état 51
    "("                      décalage et aller à l'état 52
    "-"                      décalage et aller à l'état 53
    INVALID_HEX_NUMBER       décalage et aller à l'état 54
    INVALID_CHAR             décalage et aller à l'état 55
    INVALID_EOF_STRING       décalage et aller à l'état 56
    INVALID_EOF_COMMENT      décalage et aller à l'état 57
    INVALID_INTEGER_LITERAL  décalage et aller à l'état 58
    INTEGER_LITERAL          décalage et aller à l'état 59
    OBJECT_IDENTIFIER        décalage et aller à l'état 60
    STRING_LITERAL           décalage et aller à l'état 61

    Block         aller à l'état 62
    Expr          aller à l'état 80
    If            aller à l'état 64
    While         aller à l'état 65
    Let           aller à l'état 66
    Literal       aller à l'état 67
    InvalidToken  aller à l'état 68


État 54

   65 InvalidToken: INVALID_HEX_NUMBER •

    $défaut  réduction par utilisation de la règle 65 (InvalidToken)


État 55

   64 InvalidToken: INVALID_CHAR •

    $défaut  réduction par utilisation de la règle 64 (InvalidToken)


État 56

   67 InvalidToken: INVALID_EOF_STRING •

    $défaut  réduction par utilisation de la règle 67 (InvalidToken)


État 57

   68 InvalidToken: INVALID_EOF_COMMENT •

    $défaut  réduction par utilisation de la règle 68 (InvalidToken)


État 58

   66 InvalidToken: INVALID_INTEGER_LITERAL •

    $défaut  réduction par utilisation de la règle 66 (InvalidToken)


État 59

   60 Literal: INTEGER_LITERAL •

    $défaut  réduction par utilisation de la règle 60 (Literal)


État 60

   28 Expr: OBJECT_IDENTIFIER • "<-" Expr
   41     | OBJECT_IDENTIFIER • "(" Args ")"
   44     | OBJECT_IDENTIFIER •

    "("   décalage et aller à l'état 81
    "<-"  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 44 (Expr)


État 61

   61 Literal: STRING_LITERAL •

    $défaut  réduction par utilisation de la règle 61 (Literal)


État 62

   49 Expr: Block •

    $défaut  réduction par utilisation de la règle 49 (Expr)


État 63

   10 Field: OBJECT_IDENTIFIER ":" Type "<-" Expr • ";"
   30 Expr: Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "and"  décalage et aller à l'état 83
    ";"    décalage et aller à l'état 84
    "+"    décalage et aller à l'état 85
    "-"    décalage et aller à l'état 86
    "*"    décalage et aller à l'état 87
    "/"    décalage et aller à l'état 88
    "^"    décalage et aller à l'état 89
    "."    décalage et aller à l'état 90
    "="    décalage et aller à l'état 91
    "<"    décalage et aller à l'état 92
    "<="   décalage et aller à l'état 93


État 64

   25 Expr: If •

    $défaut  réduction par utilisation de la règle 25 (Expr)


État 65

   26 Expr: While •

    $défaut  réduction par utilisation de la règle 26 (Expr)


État 66

   27 Expr: Let •

    $défaut  réduction par utilisation de la règle 27 (Expr)


État 67

   46 Expr: Literal •

    $défaut  réduction par utilisation de la règle 46 (Expr)


État 68

   50 Expr: InvalidToken •

    $défaut  réduction par utilisation de la règle 50 (Expr)


État 69

   11 Method: OBJECT_IDENTIFIER "(" Formals ")" ":" Type • Block

    "{"  décalage et aller à l'état 51

    Block  aller à l'état 94


État 70

   20 FormalsContinued: "," Formal FormalsContinued •

    $défaut  réduction par utilisation de la règle 20 (FormalsContinued)


État 71

   30 Expr: Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"
   51 If: "if" Expr • "then" Expr
   52   | "if" Expr • "then" Expr "else" Expr

    "and"   décalage et aller à l'état 83
    "then"  décalage et aller à l'état 95
    "+"     décalage et aller à l'état 85
    "-"     décalage et aller à l'état 86
    "*"     décalage et aller à l'état 87
    "/"     décalage et aller à l'état 88
    "^"     décalage et aller à l'état 89
    "."     décalage et aller à l'état 90
    "="     décalage et aller à l'état 91
    "<"     décalage et aller à l'état 92
    "<="    décalage et aller à l'état 93


État 72

   30 Expr: Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   40     | "isnull" Expr •
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "^"  décalage et aller à l'état 89
    "."  décalage et aller à l'état 90

    $défaut  réduction par utilisation de la règle 40 (Expr)


État 73

   54 Let: "let" OBJECT_IDENTIFIER • ":" Type "in" Expr
   55    | "let" OBJECT_IDENTIFIER • ":" Type "<-" Expr "in" Expr

    ":"  décalage et aller à l'état 96


État 74

   43 Expr: "new" TYPE_IDENTIFIER •

    $défaut  réduction par utilisation de la règle 43 (Expr)


État 75

   29 Expr: "not" Expr •
   30     | Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "+"   décalage et aller à l'état 85
    "-"   décalage et aller à l'état 86
    "*"   décalage et aller à l'état 87
    "/"   décalage et aller à l'état 88
    "^"   décalage et aller à l'état 89
    "."   décalage et aller à l'état 90
    "="   décalage et aller à l'état 91
    "<"   décalage et aller à l'état 92
    "<="  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 29 (Expr)


État 76

   30 Expr: Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"
   53 While: "while" Expr • "do" Expr

    "and"  décalage et aller à l'état 83
    "do"   décalage et aller à l'état 97
    "+"    décalage et aller à l'état 85
    "-"    décalage et aller à l'état 86
    "*"    décalage et aller à l'état 87
    "/"    décalage et aller à l'état 88
    "^"    décalage et aller à l'état 89
    "."    décalage et aller à l'état 90
    "="    décalage et aller à l'état 91
    "<"    décalage et aller à l'état 92
    "<="   décalage et aller à l'état 93


État 77

   22 Block: "{" Expr • BlockExpr "}"
   30 Expr: Expr • "and" Expr
   31     | Expr • "<=" Expr
   32     | Expr • "<" Expr
   33     | Expr • "=" Expr
   34     | Expr • "-" Expr
   35     | Expr • "+" Expr
   36     | Expr • "/" Expr
   37     | Expr • "*" Expr
   38     | Expr • "^" Expr
   42     | Expr • "." OBJECT_IDENTIFIER "(" Args ")"

    "and"  décalage et aller à l'état 83
    ";"    décalage et aller à l'état 98
    "+"    décalage et aller à l'état 85
    "-"    décalage et aller à l'état 86
    "*"    décalage et aller à l'état 87
    "/"    décalage et aller à l'état 88
    "^"    décalage et aller à l'état 89
    "."    décalage et aller à l'état 90
    "="    décalage et aller à l'état 91
    "<"    décalage et aller à l'état 92
    "<="   décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 23 (BlockExpr)

    BlockExpr  aller à l'état 99


État 78

   47 Expr: "(" ")" •

    $défaut  réduction par utilisation de la règle 47 (Expr)


État 79
